# codex

./: .bazelignore  .bazelrc  .codespellignore  .codespellrc  .codex  .codexignore  .cursorrules  .dockerignore  .env  .env.sample  .gitattributes  .gitignore  .gitmodules  .npmignore  .prettierignore  .specignore  .vscodeignore  .zapabob-files  20260414_wasm_support.md  20260416_system_instructions.md  20260416_wasm_appserver.md  AGENTS.md  AGENTS_cocode.md  ANALYSIS.md  ARCHITECTURE.md  AZURE_SETUP.md  Adversys_Cyber_Agent.txt  Ai  Allison_OnePager.html  BUILD.bazel  BUILD.md  BUILD_OPTIMIZATION.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CODEX.md  CODEX_BUILD_INTEGRATION.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE_ISSUE_5965.txt  COMPREHENSIVE_OVERVIEW.MD  (+269 more)
cocode-rs/: Cargo.toml  README.md  justfile
cocode-rs/.cargo/: config.toml
cocode-rs/lsp/: CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md  TUI.md
cocode-rs/retrieval/: CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md
codex-rs/: .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  BUILD_AND_INSTALL_GUIDE.md  Cargo.toml  README.cn.md  README.md  REMOTE_ACCESS.md  bad.codexpolicy  build-performance-guide.md  build-unified.ps1  clean-build-install.ps1  client-metadata.json  clippy.toml  clippy_full.txt  clippy_warnings.txt  config.md  config.toml  cursor-mcp-config.json  default.nix  deny.toml  emergency-repair.ps1  errors.txt  errors_full.txt  fix_plan_vars.py  hawk.toml  install-sccache-simple.ps1  install-sccache.ps1  install-unified.ps1  justfile  local_analytics_plan.md  markdown-plan.md  mcp-server-info.md  monitor-build.ps1  multi-slash.diff  output_log.txt  package.json  rtzr-docs-summary.md  rust-toolchain.toml  (+13 more)
codex-rs/.cargo/: audit.toml  config.toml
codex-rs/.config/: nextest.toml
codex-rs/_docs/: 2025-10-23_GeminiCLI_MCP統合実装.md  2025-10-23_実機テスト結果_GeminiCLI_MCP.md  2025-10-31_差分ビルドグローバルインストール.md
codex-rs/a2a/: Cargo.toml
codex-rs/agent-graph-store/: BUILD.bazel  Cargo.toml
codex-rs/agent-identity/: BUILD.bazel  Cargo.toml
codex-rs/agent-runtime/: BUILD.bazel  Cargo.toml
codex-rs/agents-md/: BUILD.bazel  Cargo.toml
codex-rs/analytics/: Cargo.toml
codex-rs/analytics-materializer/: BUILD.bazel  Cargo.toml
codex-rs/ansi-escape/: BUILD.bazel  Cargo.toml  README.cn.md  README.md  mod.spec.md
codex-rs/anthropic-sdk/: Cargo.toml  README.md
codex-rs/app-server/: BUILD.bazel  Cargo.toml  MULTITENANCY_AUDIT.md  README.cn.md  README.md
codex-rs/app-server-client/: Cargo.toml  README.md
codex-rs/app-server-daemon/: Cargo.toml  README.md
codex-rs/app-server-json-schema/: BUILD.bazel  Cargo.toml
codex-rs/app-server-protocol/: BUILD.bazel  Cargo.toml  mod.spec.md  stable-api-breakages.toml
codex-rs/app-server-protocol-stable-export/: BUILD.bazel  Cargo.toml
codex-rs/app-server-test-client/: BUILD.bazel  Cargo.toml  README.cn.md  README.md
codex-rs/app-server-transport/: BUILD.bazel  Cargo.toml
codex-rs/app-server-ts-types/: BUILD.bazel  Cargo.toml
codex-rs/app-server-ws/: Cargo.toml
codex-rs/apply-patch/: BUILD.bazel  Cargo.toml  apply_patch_tool_instructions.md  mod.spec.md
codex-rs/apps/: BUILD.bazel  Cargo.toml
codex-rs/arg0/: BUILD.bazel  Cargo.toml  mod.spec.md
codex-rs/artifact-presentation/: Cargo.toml
codex-rs/artifacts/: report.md
codex-rs/async-utils/: BUILD.bazel  Cargo.toml  mod.spec.md
codex-rs/auth/: BUILD.bazel  Cargo.toml
codex-rs/aws-auth/: Cargo.toml
codex-rs/backend-client/: BUILD.bazel  Cargo.toml  mod.spec.md
codex-rs/benches/: git_analysis.rs
codex-rs/bridge/: BUILD.bazel  Cargo.toml
codex-rs/bundles/: BUILD.bazel  Cargo.toml
codex-rs/chatgpt/: BUILD.bazel  Cargo.toml  README.cn.md  README.md  mod.spec.md
codex-rs/cli/: BUILD.bazel  Cargo.toml
codex-rs/cloud-config/: Cargo.toml
codex-rs/cloud-requirements/: Cargo.toml
codex-rs/cloud-tasks/: BUILD.bazel  Cargo.toml  mod.spec.md
codex-rs/cloud-tasks-client/: BUILD.bazel  Cargo.toml  mod.spec.md
codex-rs/code-mode/: Cargo.toml
codex-rs/code-mode-client/: BUILD.bazel  Cargo.toml
codex-rs/code-mode-host/: BUILD.bazel  Cargo.toml
codex-rs/code-mode-protocol/: BUILD.bazel  Cargo.toml
codex-rs/code-mode-runtime/: BUILD.bazel  Cargo.toml
codex-rs/code-review/: CHANGELOG.md  Cargo.toml  README.md
codex-rs/codex-api/: .gitignore  BUILD.bazel  Cargo.toml  README.md
codex-rs/codex-backend-openapi-models/: BUILD.bazel  Cargo.toml  mod.spec.md
codex-rs/codex-client/: BUILD.bazel  Cargo.toml  README.md
codex-rs/codex-experimental-api-macros/: BUILD.bazel
codex-rs/codex-hooks/: CLAUDE.md  Cargo.toml  README.md
helios-rs/: Cargo.toml
patches/: BUILD.bazel  aws-lc-sys-skip-memcmp.patch  aws-lc-sys_prebuilt.patch  aws-lc-sys_skip_memcmp_check.patch  aws-lc-sys_windows_bazel_prebuilt_nasm.patch  aws-lc-sys_windows_msvc_prebuilt_nasm.patch  bzip2_windows_stack_args.patch  llvm_rusty_v8_custom_libcxx.patch  llvm_toolchain_archive_params.patch  llvm_windows_arm64_powl.patch  llvm_windows_gnullvm_abi.patch  llvm_windows_mingw_compat.patch  llvm_windows_msvcrt_ucrt_compat.patch  llvm_windows_symlink_extract.patch  marked-terminal@7.3.0.patch  ncurses-skip-probe.patch  rama-crypto-no-bindgen.patch  rules_rs_build_script_deps_annotation.patch  rules_rs_build_script_target_deps.patch  rules_rs_platform.patch  rules_rs_repository_utils.patch  rules_rs_windows_exec_linker.patch  rules_rs_windows_gnullvm_exec.patch  rules_rs_windows_gnullvm_link_flags.patch  rules_rust.patch  rules_rust_direct_deps.patch  rules_rust_musl.patch  rules_rust_musl_load.patch  rules_rust_musl_triple_aarch64.patch  rules_rust_musl_triple_x86_64.patch  rules_rust_repository_set_replacement.patch  rules_rust_stable_explicit_test_shards.patch  rules_rust_windows_bootstrap_process_wrapper_linker.patch  rules_rust_windows_build_script_runner_paths.patch  rules_rust_windows_exec_bin_target.patch  rules_rust_windows_exec_msvc_build_script_env.patch  rules_rust_windows_exec_rustc_dev_rlib.patch  rules_rust_windows_exec_std.patch  rules_rust_windows_gnullvm_build_script.patch  rules_rust_windows_msvc_direct_link_args.patch  (+13 more)
(+15049 files in other folders)
