# We mark the local platform as glibc-compatible so that rust can grab a toolchain for us.
# TODO(zbarsky): Upstream a better libc constraint into rules_rust.
# We only enable this on linux though for sanity, and because it breaks remote execution.
platform(
    name = "local",
    constraint_values = [
        "@toolchains_llvm_bootstrapped//constraints/libc:gnu.2.28",
    ],
    parents = [
        "@platforms//host",
    ],
)

platform(
    name = "rbe",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@bazel_tools//tools/cpp:clang",
        "@toolchains_llvm_bootstrapped//constraints/libc:gnu.2.28",
    ],
    exec_properties = {
        # Ubuntu-based image that includes git, python3, dotslash, and other
        # tools that various integration tests need.
        # Verify at https://hub.docker.com/layers/mbolin491/codex-bazel/latest/images/sha256:3e7da794f47da2c1381fca18917dd1c914350a6c71a61624e532888a2275a1b2
        "container-image": "docker://docker.io/mbolin491/codex-bazel@sha256:3e7da794f47da2c1381fca18917dd1c914350a6c71a61624e532888a2275a1b2",
        "OSFamily": "Linux",
    },
)
