[workspace]
members = [
    "common/error",
    "common/protocol",
    "common/config",
    "common/otel",
    "core/api",
    "core/message",
    "core/tools",
    "core/context",
    "core/prompt",
    "core/system-reminder",
    "utils/file-encoding",
    "utils/file-ignore",
    "utils/file-search",
    "provider-sdks/anthropic",
    "provider-sdks/openai",
    "provider-sdks/volcengine-ark",
    "provider-sdks/z-ai",
    "provider-sdks/google-genai",
    "provider-sdks/hyper-sdk",
    "utils/common",
    "utils/absolute-path",
    "utils/cargo-bin",
    "utils/git",
    "utils/cache",
    "utils/image",
    "utils/json-to-toml",
    "utils/pty",
    "utils/readiness",
    "utils/string",
    "utils/async-utils",
    "utils/keyring-store",
    "utils/stdio-to-uds",
    "mcp/mcp-types",
    "mcp/rmcp-client",
    "utils/apply-patch",
    "utils/shell-parser",
    "retrieval",
    "lsp",
    "exec/shell",
    "exec/sandbox",
    "exec/arg0",
    "features/skill",
    "features/hooks",
    "features/plugin",
    "features/plan-mode",
    "core/loop",
    "core/subagent",
    "core/executor",
    "app/session",
    "app/cli",
    "app/tui",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
# Track the edition for all workspace crates in one place. Individual
# crates can still override this value, but keeping it here means new
# crates created with `cargo new -w ...` automatically inherit the 2024
# edition.
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal - common
cocode-error = { path = "common/error" }
cocode-protocol = { path = "common/protocol" }
cocode-config = { path = "common/config" }
cocode-otel = { path = "common/otel" }

# Internal - core
cocode-api = { path = "core/api" }
cocode-message = { path = "core/message" }
cocode-tools = { path = "core/tools" }
cocode-context = { path = "core/context" }
cocode-prompt = { path = "core/prompt" }
cocode-loop = { path = "core/loop" }
cocode-subagent = { path = "core/subagent" }
cocode-system-reminder = { path = "core/system-reminder" }
cocode-executor = { path = "core/executor" }

# Internal - provider SDKs (keep original names)
anthropic-sdk = { path = "provider-sdks/anthropic" }
openai-sdk = { path = "provider-sdks/openai" }
volcengine-ark-sdk = { path = "provider-sdks/volcengine-ark" }
z-ai-sdk = { path = "provider-sdks/z-ai" }
google-genai-sdk = { path = "provider-sdks/google-genai" }
hyper-sdk = { path = "provider-sdks/hyper-sdk" }

# Internal - utilities (renamed codex → cocode)
cocode-file-encoding = { path = "utils/file-encoding" }
cocode-async-utils = { path = "utils/async-utils" }
cocode-keyring-store = { path = "utils/keyring-store" }
cocode-file-ignore = { path = "utils/file-ignore" }
cocode-file-search = { path = "utils/file-search" }
cocode-git = { path = "utils/git" }
cocode-utils-absolute-path = { path = "utils/absolute-path" }
cocode-utils-cache = { path = "utils/cache" }
cocode-utils-cargo-bin = { path = "utils/cargo-bin" }
cocode-utils-common = { path = "utils/common" }
cocode-utils-image = { path = "utils/image" }
cocode-utils-json-to-toml = { path = "utils/json-to-toml" }
cocode-utils-pty = { path = "utils/pty" }
cocode-utils-readiness = { path = "utils/readiness" }
cocode-utils-string = { path = "utils/string" }
cocode-stdio-to-uds = { path = "utils/stdio-to-uds" }
cocode-apply-patch = { path = "utils/apply-patch" }
cocode-shell-parser = { path = "utils/shell-parser" }

# Internal - MCP
cocode-mcp-types = { path = "mcp/mcp-types" }
cocode-rmcp-client = { path = "mcp/rmcp-client" }

# Internal - exec
cocode-shell = { path = "exec/shell" }
cocode-sandbox = { path = "exec/sandbox" }
cocode-arg0 = { path = "exec/arg0" }

# Internal - features
cocode-skill = { path = "features/skill" }
cocode-hooks = { path = "features/hooks" }
cocode-plugin = { path = "features/plugin" }
cocode-plan-mode = { path = "features/plan-mode" }

# Internal - app
cocode-session = { path = "app/session" }
cocode-cli = { path = "app/cli" }
cocode-tui = { path = "app/tui" }

# Internal - LSP
cocode-lsp = { path = "lsp" }

# External (only those actually used by existing crates)
anyhow = "1"
assert_cmd = "2"
assert_matches = "1.5.0"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.42"
clap = "4"
dotenvy = "0.15.7"
eventsource-stream = "0.2.3"
futures = { version = "0.3", default-features = false }
globset = "0.4"
http = "1.3.1"
humantime-serde = "1"
ignore = "0.4.23"
image = { version = "^0.25.9", default-features = false }
keyring = "3"
lazy_static = "1"
log = "0.4"
lru = "0.16.3"
nucleo-matcher = "0.3.1"
once_cell = "1.20.2"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
path-absolutize = "3.1.1"
portable-pty = "0.9.0"
pretty_assertions = "1.4.1"
rand = "0.9"
regex = "1.12.2"
regex-lite = "0.1.8"
reqwest = "0.12"
schemars = "0.8.22"
serde = "1"
serde_json = "1"
similar = "2"
snafu = "0.8"
snafu-virtstack = "0.1"
streaming-iterator = "0.1"
strum = { version = "0.27", features = ["derive"] }
sha1 = "0.10.6"
tempfile = "3.23.0"
thiserror = "2.0.17"
time = "0.3"
tokio = "1"
tokio-stream = "0.1.18"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tonic = "0.12"
tokio-util = "0.7"
toml = "0.9.5"
tracing = "0.1.43"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.22"
ts-rs = "11"
uuid = "1"
walkdir = "2.5.0"
wiremock = "0.6"
uds_windows = "1"

# External - MCP related
axum = { version = "0.8", default-features = false }
dirs = "6"
oauth2 = "5"
rmcp = { version = "0.12.0", default-features = false }
serial_test = "3"
sha2 = "0.10"
tiny_http = "0.12"
urlencoding = "2"
webbrowser = "1"
which = "7"
arboard = "3"

# External - retrieval related
async-stream = "0.3"
crossterm = "0.28"
derive_more = "2"
insta = "1"
itertools = "0.14"
ratatui = "0.29"
ratatui-macros = "0.6"
textwrap = "0.16"
tokio-test = "0.4"
tracing-appender = "0.2"
tree-sitter-highlight = "0.25"
unicode-segmentation = "1"
unicode-width = "0.2"
vt100 = "0.15"

# i18n
rust-i18n = "3"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

[workspace.metadata.cargo-shear]
ignored = ["cocode-utils-readiness"]

[profile.dev]
split-debuginfo = "unpacked"  # Skip dsymutil on macOS, faster incremental linking

[profile.dev.package."*"]
opt-level = 1  # Optimize third-party deps (compiled once, faster runtime)

[profile.release]
lto = "thin"
# Because we bundle some of these executables with the TypeScript CLI, we
# remove everything to make the binary as small as possible.
strip = "symbols"

# See https://github.com/openai/codex/issues/1411 for details.
codegen-units = 1

[profile.ci]
inherits = "dev"
strip = true         # CI doesn't need debug symbols
debug = false        # Disable debug info entirely, reduces artifact size 40-60%

[profile.ci-test]
debug = 1         # Reduce debug symbol size
inherits = "test"
opt-level = 0
