[workspace]
members = [
    "backend-client",
    "ansi-escape",
    "async-utils",
    "app-server",
    "app-server-protocol",
    "app-server-test-client",
    "apply-patch",
    "arg0",
    "feedback",
    "codex-backend-openapi-models",
    "cloud-tasks",
    "cloud-tasks-client",
    "cli",
    "common",
    "core",
    "exec",
    "exec-server",
    "execpolicy",
    "execpolicy2",
    "keyring-store",
    "file-search",
    "linux-sandbox",
    "lmstudio",
    "login",
    "mcp-server",
    "mcp-types",
    "ollama",
    "process-hardening",
    "protocol",
    "rmcp-client",
    "responses-api-proxy",
    "stdio-to-uds",
    "otel",
    "tui",
    "utils/git",
    "utils/cache",
    "utils/image",
    "utils/json-to-toml",
    "utils/pty",
    "utils/readiness",
    "utils/string",
    "utils/tokenizer",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
# Track the edition for all workspace crates in one place. Individual
# crates can still override this value, but keeping it here means new
# crates created with `cargo new -w ...` automatically inherit the 2024
# edition.
edition = "2024"

[workspace.dependencies]
# Internal
app_test_support = { path = "app-server/tests/common" }
codex-ansi-escape = { path = "ansi-escape" }
codex-app-server = { path = "app-server" }
codex-app-server-protocol = { path = "app-server-protocol" }
codex-apply-patch = { path = "apply-patch" }
codex-arg0 = { path = "arg0" }
codex-async-utils = { path = "async-utils" }
codex-backend-client = { path = "backend-client" }
codex-chatgpt = { path = "chatgpt" }
codex-common = { path = "common" }
codex-core = { path = "core" }
codex-exec = { path = "exec" }
codex-feedback = { path = "feedback" }
codex-file-search = { path = "file-search" }
codex-git = { path = "utils/git" }
codex-keyring-store = { path = "keyring-store" }
codex-linux-sandbox = { path = "linux-sandbox" }
codex-lmstudio = { path = "lmstudio" }
codex-login = { path = "login" }
codex-mcp-server = { path = "mcp-server" }
codex-ollama = { path = "ollama" }
codex-otel = { path = "otel" }
codex-process-hardening = { path = "process-hardening" }
codex-protocol = { path = "protocol" }
codex-responses-api-proxy = { path = "responses-api-proxy" }
codex-rmcp-client = { path = "rmcp-client" }
codex-stdio-to-uds = { path = "stdio-to-uds" }
codex-tui = { path = "tui" }
codex-utils-cache = { path = "utils/cache" }
codex-utils-image = { path = "utils/image" }
codex-utils-json-to-toml = { path = "utils/json-to-toml" }
codex-utils-pty = { path = "utils/pty" }
codex-utils-readiness = { path = "utils/readiness" }
codex-utils-string = { path = "utils/string" }
codex-utils-tokenizer = { path = "utils/tokenizer" }
codex-windows-sandbox = { path = "windows-sandbox-rs" }
core_test_support = { path = "core/tests/common" }
mcp-types = { path = "mcp-types" }
mcp_test_support = { path = "mcp-server/tests/common" }

# External
allocative = "0.3.3"
ansi-to-tui = "7.0.0"
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
askama = "0.14"
assert_cmd = "2"
assert_matches = "1.5.0"
async-channel = "2.3.1"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8", default-features = false }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.42"
clap = "4"
clap_complete = "4"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ctor = "0.5.0"
derive_more = "2"
diffy = "0.4.2"
dirs = "6"
dotenvy = "0.15.7"
dunce = "1.0.4"
env-flags = "0.1.1"
env_logger = "0.11.5"
escargot = "0.5"
eventsource-stream = "0.2.3"
futures = { version = "0.3", default-features = false }
http = "1.3.1"
insta = { version = "1", features = ["json"] }
insta-cmd = "0.6.0"
insta-cmd-snapbox = "0.6.0"
insta-cmd-v0 = { version = "0.3.0", package = "insta-cmd" }
insta_v0 = { version = "1", package = "insta" }
insta_v1 = { version = "1", package = "insta" }
insta_v2 = { version = "1", package = "insta" }
insta_v3 = { version = "1", package = "insta" }
insta_v4 = { version = "1", package = "insta" }
insta_v5 = { version = "1", package = "insta" }
insta_v6 = { version = "1", package = "insta" }
insta_v7 = { version = "1", package = "insta" }
insta_v8 = { version = "1", package = "insta" }
insta_v9 = { version = "1", package = "insta" }
insta_v10 = { version = "1", package = "insta" }
insta_v11 = { version = "1", package = "insta" }
insta_v12 = { version = "1", package = "insta" }
insta_v13 = { version = "1", package = "insta" }
insta_v14 = { version = "1", package = "insta" }
insta_v15 = { version = "1", package = "insta" }
insta_v16 = { version = "1", package = "insta" }
insta_v17 = { version = "1", package = "insta" }
insta_v18 = { version = "1", package = "insta" }
insta_v19 = { version = "1", package = "insta" }
insta_v20 = { version = "1", package = "insta" }
insta_v21 = { version = "1", package = "insta" }
insta_v22 = { version = "1", package = "insta" }
insta_v23 = { version = "1", package = "insta" }
insta_v24 = { version = "1", package = "insta" }
insta_v25 = { version = "1", package = "insta" }
insta_v26 = { version = "1", package = "insta" }
insta_v27 = { version = "1", package = "insta" }
insta_v28 = { version = "1", package = "insta" }
insta_v29 = { version = "1", package = "insta" }
insta_v30 = { version = "1", package = "insta" }
insta_v31 = { version = "1", package = "insta" }
insta_v32 = { version = "1", package = "insta" }
insta_v33 = { version = "1", package = "insta" }
insta_v34 = { version = "1", package = "insta" }
insta_v35 = { version = "1", package = "insta" }
insta_v36 = { version = "1", package = "insta" }
insta_v37 = { version = "1", package = "insta" }
insta_v38 = { version = "1", package = "insta" }
insta_v39 = { version = "1", package = "insta" }
insta_v40 = { version = "1", package = "insta" }
insta_v41 = { version = "1", package = "insta" }
insta_v42 = { version = "1", package = "insta" }
insta_v43 = { version = "1", package = "insta" }
insta_v44 = { version = "1", package = "insta" }
insta_v45 = { version = "1", package = "insta" }
insta_v46 = { version = "1", package = "insta" }
insta_v47 = { version = "1", package = "insta" }
insta_v48 = { version = "1", package = "insta" }
insta_v49 = { version = "1", package = "insta" }
insta_v50 = { version = "1", package = "insta" }
insta_v51 = { version = "1", package = "insta" }
insta_v52 = { version = "1", package = "insta" }
insta_v53 = { version = "1", package = "insta" }
insta_v54 = { version = "1", package = "insta" }
insta_v55 = { version = "1", package = "insta" }
insta_v56 = { version = "1", package = "insta" }
insta_v57 = { version = "1", package = "insta" }
insta_v58 = { version = "1", package = "insta" }
insta_v59 = { version = "1", package = "insta" }
insta_v60 = { version = "1", package = "insta" }
insta_v61 = { version = "1", package = "insta" }
insta_v62 = { version = "1", package = "insta" }
insta_v63 = { version = "1", package = "insta" }
insta_v64 = { version = "1", package = "insta" }
insta_v65 = { version = "1", package = "insta" }
insta_v66 = { version = "1", package = "insta" }
insta_v67 = { version = "1", package = "insta" }
insta_v68 = { version = "1", package = "insta" }
insta_v69 = { version = "1", package = "insta" }
insta_v70 = { version = "1", package = "insta" }
insta_v71 = { version = "1", package = "insta" }
insta_v72 = { version = "1", package = "insta" }
insta_v73 = { version = "1", package = "insta" }
insta_v74 = { version = "1", package = "insta" }
insta_v75 = { version = "1", package = "insta" }
insta_v76 = { version = "1", package = "insta" }
insta_v77 = { version = "1", package = "insta" }
insta_v78 = { version = "1", package = "insta" }
insta_v79 = { version = "1", package = "insta" }
insta_v80 = { version = "1", package = "insta" }
insta_v81 = { version = "1", package = "insta" }
insta_v82 = { version = "1", package = "insta" }
insta_v83 = { version = "1", package = "insta" }
insta_v84 = { version = "1", package = "insta" }
insta_v85 = { version = "1", package = "insta" }
insta_v86 = { version = "1", package = "insta" }
insta_v87 = { version = "1", package = "insta" }
insta_v88 = { version = "1", package = "insta" }
insta_v89 = { version = "1", package = "insta" }
insta_v90 = { version = "1", package = "insta" }
insta_v91 = { version = "1", package = "insta" }
insta_v92 = { version = "1", package = "insta" }
insta_v93 = { version = "1", package = "insta" }
insta_v94 = { version = "1", package = "insta" }
insta_v95 = { version = "1", package = "insta" }
insta_v96 = { version = "1", package = "insta" }
insta_v97 = { version = "1", package = "insta" }
insta_v98 = { version = "1", package = "insta" }
insta_v99 = { version = "1", package = "insta" }
insta_v100 = { version = "1", package = "insta" }

ratatui = { version = "0.29.0", default-features = false }
ratatui-macros = "0.6.0"
regex-lite = "0.1.7"
reqwest = { version = "0.12", default-features = false }
rmcp = { version = "0.8.5", default-features = false }
schemars = "0.8.22"
seccompiler = "0.5.0"
sentry = "0.34.0"
serde = "1"
serde_json = "1"
serde_with = "3.14"
serial_test = "3.2.0"
sha1 = "0.10.6"
sha2 = "0.10"
shlex = "1.3.0"
similar = "2.7.0"
socket2 = "0.6.0"
starlark = "0.13.0"
strum = "0.27.2"
strum_macros = "0.27.2"
supports-color = "3.0.2"
sys-locale = "0.3.2"
tempfile = "3.23.0"
test-log = "0.2.18"
textwrap = "0.16.2"
thiserror = "2.0.17"
tiktoken-rs = "0.9"
time = "0.3"
tiny_http = "0.12"
tokio = "1"
tokio-stream = "0.1.17"
tokio-test = "0.4"
tokio-util = "0.7.16"
toml = "0.9.5"
toml_edit = "0.23.4"
tonic = "0.13.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
tree-sitter-highlight = "0.25.10"
ts-rs = "11"
uds_windows = "1.1.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2"
url = "2"
urlencoding = "2.1"
uuid = "1"
vt100 = "0.16.2"
walkdir = "2.5.0"
webbrowser = "1.0"
which = "6"
wildmatch = "2.5.0"

wiremock = "0.6"
zeroize = "1.8.2"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

# cargo-shear cannot see the platform-specific openssl-sys usage, so we
# silence the false positive here instead of deleting a real dependency.
[workspace.metadata.cargo-shear]
ignored = [
    "icu_provider",
    "openssl-sys",
    "codex-utils-readiness",
    "codex-utils-tokenizer",
]

[profile.release]
lto = "fat"
# Because we bundle some of these executables with the TypeScript CLI, we
# remove everything to make the binary as small as possible.
strip = "symbols"

# See https://github.com/openai/codex/issues/1411 for details.
codegen-units = 1

[profile.ci-test]
debug = 1         # Reduce debug symbol size
inherits = "test"
opt-level = 0

[patch.crates-io]
# Uncomment to debug local changes.
# ratatui = { path = "../../ratatui" }
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }

# Uncomment to debug local changes.
# rmcp = { path = "../../rust-sdk/crates/rmcp" }
